--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
+  "name": "topia-emoji",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "fast-xml-parser": "^4.0.9",
-    "million": "^1.12.0-beta.0",
-    "twind": "^0.16.17"
+    "@use-gesture/react": "^10.2.23",
+    "classnames": "^2.3.2",
+    "culori": "^2.0.3",
+    "jotai": "^1.11.2",
+    "nanoid": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-use-rect": "^2.0.4",
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.2"
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
